# PTAMonUbuntu14.04

./: PTAM-Ubuntu14.04Cmake.bash  PTAM-r114-linuxYuji.patch  README.md
fileForCmake/: CMakeLists.txt
fileForCmake/cmake/: FindCVD.cmake
